@@ -1,10 +1,16 @@
+2002-06-01  James Henstridge  <james@daa.com.au>
+
+	* src/yelp-db2html.c (main): perform XInclude processing on
+	  Docbook/XML documents we load.
+
 2002-06-01  Jesus Bravo Alvarez  <jba@pobox.com>
 
 	* configure.in: Added "gl" (Galician) to ALL_LINGUAS
 
 2002-05-29  Radek Doulik  <rodo@ximian.com>
 
-	* src/yelp-html-gtkhtml1.c: removed #include "yelp-db2html.h"
+	* src/yelp-html-gtkhtml1.c: 
+	- removed #include "yelp-db2html.h"
 	(html_url_requested_cb): close gtkhtml stream
 
 2002-05-31  Mikael Hallendal  <micke@codefactory.se>
